--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "7.4.47",
     "axios": "^1.9.0",
     "firebase": "^11.6.1",
+    "leaflet": "^1.9.4",
     "roboto-fontface": "*",
     "vue": "^3.5.13",
     "vuetify": "^3.8.1"
